haskell/Guestfs.hs


debug :: GuestfsH -> String -> [String] -> IO String
debug h subcmd extraargs = do
  r <- withCString subcmd $ \subcmd -> withMany withCString extraargs $ \extraargs -> withArray0 nullPtr extraargs $ \extraargs -> withForeignPtr h (\p -> c_debug p subcmd extraargs)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_debug_drives" c_debug_drives
  :: GuestfsP -> IO (Ptr CString)

debug_drives :: GuestfsH -> IO [String]
debug_drives h = do
  r <- withForeignPtr h (\p -> c_debug_drives p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_debug_upload" c_debug_upload
  :: GuestfsP -> CString -> CString -> CInt -> IO CInt

debug_upload :: GuestfsH -> String -> String -> Int -> IO ()
debug_upload h filename tmpname mode = do
  r <- withCString filename $ \filename -> withCString tmpname $ \tmpname -> withForeignPtr h (\p -> c_debug_upload p filename tmpname (fromIntegral mode))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_device_index" c_device_index
  :: GuestfsP -> CString -> IO CInt

device_index :: GuestfsH -> String -> IO Int
device_index h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_device_index p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_df" c_df
  :: GuestfsP -> IO CString

df :: GuestfsH -> IO String
df h = do
  r <- withForeignPtr h (\p -> c_df p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_df_h" c_df_h
  :: GuestfsP -> IO CString

df_h :: GuestfsH -> IO String
df_h h = do
  r <- withForeignPtr h (\p -> c_df_h p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_disk_format" c_disk_format
  :: GuestfsP -> CString -> IO CString

disk_format :: GuestfsH -> String -> IO String
disk_format h filename = do
  r <- withCString filename $ \filename -> withForeignPtr h (\p -> c_disk_format p filename)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_disk_has_backing_file" c_disk_has_backing_file
  :: GuestfsP -> CString -> IO CInt

disk_has_backing_file :: GuestfsH -> String -> IO Bool
disk_has_backing_file h filename = do
  r <- withCString filename $ \filename -> withForeignPtr h (\p -> c_disk_has_backing_file p filename)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_disk_virtual_size" c_disk_virtual_size
  :: GuestfsP -> CString -> IO Int64

disk_virtual_size :: GuestfsH -> String -> IO Int64
disk_virtual_size h filename = do
  r <- withCString filename $ \filename -> withForeignPtr h (\p -> c_disk_virtual_size p filename)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_dmesg" c_dmesg
  :: GuestfsP -> IO CString

dmesg :: GuestfsH -> IO String
dmesg h = do
  r <- withForeignPtr h (\p -> c_dmesg p)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_download" c_download
  :: GuestfsP -> CString -> CString -> IO CInt

download :: GuestfsH -> String -> String -> IO ()
download h remotefilename filename = do
  r <- withCString remotefilename $ \remotefilename -> withCString filename $ \filename -> withForeignPtr h (\p -> c_download p remotefilename filename)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_download_offset" c_download_offset
  :: GuestfsP -> CString -> CString -> Int64 -> Int64 -> IO CInt

download_offset :: GuestfsH -> String -> String -> Integer -> Integer -> IO ()
download_offset h remotefilename filename offset size = do
  r <- withCString remotefilename $ \remotefilename -> withCString filename $ \filename -> withForeignPtr h (\p -> c_download_offset p remotefilename filename (fromIntegral offset) (fromIntegral size))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_drop_caches" c_drop_caches
  :: GuestfsP -> CInt -> IO CInt

drop_caches :: GuestfsH -> Int -> IO ()
drop_caches h whattodrop = do
  r <- withForeignPtr h (\p -> c_drop_caches p (fromIntegral whattodrop))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_du" c_du
  :: GuestfsP -> CString -> IO Int64

du :: GuestfsH -> String -> IO Int64
du h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_du p path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_e2fsck_f" c_e2fsck_f
  :: GuestfsP -> CString -> IO CInt

e2fsck_f :: GuestfsH -> String -> IO ()
e2fsck_f h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_e2fsck_f p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_echo_daemon" c_echo_daemon
  :: GuestfsP -> Ptr CString -> IO CString

echo_daemon :: GuestfsH -> [String] -> IO String
echo_daemon h words = do
  r <- withMany withCString words $ \words -> withArray0 nullPtr words $ \words -> withForeignPtr h (\p -> c_echo_daemon p words)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_egrep" c_egrep
  :: GuestfsP -> CString -> CString -> IO (Ptr CString)

egrep :: GuestfsH -> String -> String -> IO [String]
egrep h regex path = do
  r <- withCString regex $ \regex -> withCString path $ \path -> withForeignPtr h (\p -> c_egrep p regex path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_egrepi" c_egrepi
  :: GuestfsP -> CString -> CString -> IO (Ptr CString)

egrepi :: GuestfsH -> String -> String -> IO [String]
egrepi h regex path = do
  r <- withCString regex $ \regex -> withCString path $ \path -> withForeignPtr h (\p -> c_egrepi p regex path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_equal" c_equal
  :: GuestfsP -> CString -> CString -> IO CInt

equal :: GuestfsH -> String -> String -> IO Bool
equal h file1 file2 = do
  r <- withCString file1 $ \file1 -> withCString file2 $ \file2 -> withForeignPtr h (\p -> c_equal p file1 file2)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_exists" c_exists
  :: GuestfsP -> CString -> IO CInt

exists :: GuestfsH -> String -> IO Bool
exists h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_exists p path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_extlinux" c_extlinux
  :: GuestfsP -> CString -> IO CInt

extlinux :: GuestfsH -> String -> IO ()
extlinux h directory = do
  r <- withCString directory $ \directory -> withForeignPtr h (\p -> c_extlinux p directory)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_fallocate" c_fallocate
  :: GuestfsP -> CString -> CInt -> IO CInt

fallocate :: GuestfsH -> String -> Int -> IO ()
fallocate h path len = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_fallocate p path (fromIntegral len))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_fallocate64" c_fallocate64
  :: GuestfsP -> CString -> Int64 -> IO CInt

fallocate64 :: GuestfsH -> String -> Integer -> IO ()
fallocate64 h path len = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_fallocate64 p path (fromIntegral len))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_feature_available" c_feature_available
  :: GuestfsP -> Ptr CString -> IO CInt

feature_available :: GuestfsH -> [String] -> IO Bool
feature_available h groups = do
  r <- withMany withCString groups $ \groups -> withArray0 nullPtr groups $ \groups -> withForeignPtr h (\p -> c_feature_available p groups)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_fgrep" c_fgrep
  :: GuestfsP -> CString -> CString -> IO (Ptr CString)

fgrep :: GuestfsH -> String -> String -> IO [String]
fgrep h pattern path = do
  r <- withCString pattern $ \pattern -> withCString path $ \path -> withForeignPtr h (\p -> c_fgrep p pattern path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_fgrepi" c_fgrepi
  :: GuestfsP -> CString -> CString -> IO (Ptr CString)

fgrepi :: GuestfsH -> String -> String -> IO [String]
fgrepi h pattern path = do
  r <- withCString pattern $ \pattern -> withCString path $ \path -> withForeignPtr h (\p -> c_fgrepi p pattern path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekArray0 nullPtr r >>= mapM peekCString

foreign import ccall unsafe "guestfs.h guestfs_file" c_file
  :: GuestfsP -> CString -> IO CString

file :: GuestfsH -> String -> IO String
file h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_file p path)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_file_architecture" c_file_architecture
  :: GuestfsP -> CString -> IO CString

file_architecture :: GuestfsH -> String -> IO String
file_architecture h filename = do
  r <- withCString filename $ \filename -> withForeignPtr h (\p -> c_file_architecture p filename)
  if (r == nullPtr)
    then do
      err <- last_error h
      fail err
    else peekCString r

foreign import ccall unsafe "guestfs.h guestfs_filesize" c_filesize
  :: GuestfsP -> CString -> IO Int64

filesize :: GuestfsH -> String -> IO Int64
filesize h file = do
  r <- withCString file $ \file -> withForeignPtr h (\p -> c_filesize p file)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_filesystem_available" c_filesystem_available
  :: GuestfsP -> CString -> IO CInt

filesystem_available :: GuestfsH -> String -> IO Bool
filesystem_available h filesystem = do
  r <- withCString filesystem $ \filesystem -> withForeignPtr h (\p -> c_filesystem_available p filesystem)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (toBool r)

foreign import ccall unsafe "guestfs.h guestfs_fill" c_fill
  :: GuestfsP -> CInt -> CInt -> CString -> IO CInt

fill :: GuestfsH -> Int -> Int -> String -> IO ()
fill h c len path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_fill p (fromIntegral c) (fromIntegral len) path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()
